--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -4,9 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="5dp"
+    android:id="@+id/Notification_Container"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/Friend_Request_User_Img"
+        android:id="@+id/Notification_User_Img"
         android:src="@mipmap/ic_launcher"
         android:layout_centerInParent="true"
         android:layout_alignParentLeft="true"
@@ -18,19 +19,20 @@
         android:layout_marginLeft="5dp">
     </de.hdodenhof.circleimageview.CircleImageView>
     <TextView
-        android:id="@+id/Friend_Request_User_Name"
-        android:text="User_Name님이 친구 요청을 보내셨습니다."
+        android:id="@+id/Notification_User_Name"
+        android:text="User_Name님이 친구추가 하였습니다."
         android:textSize="10dp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:layout_toRightOf="@+id/Friend_Request_User_Img"
+        android:layout_toRightOf="@+id/Notification_User_Img"
         android:layout_centerInParent="true"
         android:layout_marginLeft="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </TextView>
     <Button
-        android:id="@+id/Friend_Request_Accept_Btn"
+        android:id="@+id/Notification_Friend_Add_Btn"
+        android:visibility="gone"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:text="수락"
