--- a/app/src/main/res/layout/activity_user_profile_view.xml
+++ b/app/src/main/res/layout/activity_user_profile_view.xml
@@ -10,9 +10,9 @@
             type="com.bigjeon.grumbling.User_Profile_View_activity" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_margin="5dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="10dp"
     tools:context="com.bigjeon.grumbling.User_Profile_View_activity">
     <LinearLayout
         android:orientation="vertical"
@@ -20,10 +20,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
-            android:background="@drawable/post_view_edge_2dp"
             android:orientation="vertical"
             android:paddingBottom="5dp"
-            android:layout_weight="2"
+            android:layout_weight="1.5"
             android:layout_width="match_parent"
             android:layout_height="0dp">
             <RelativeLayout
@@ -37,8 +36,8 @@
                     android:src="@drawable/ic_launcher_background"
                     app:civ_border_color="@color/Transparent_Black70"
                     app:civ_border_width="2dp"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp">
+                    android:layout_width="65dp"
+                    android:layout_height="65dp">
                 </de.hdodenhof.circleimageview.CircleImageView>
                 <LinearLayout
                     android:id="@+id/Setting_Fragment_User_Profile_Container"
@@ -47,13 +46,6 @@
                     android:layout_toRightOf="@+id/Setting_Fragment_My_Profile_Img_Civ"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
-                    <RelativeLayout
-                        android:layout_weight="1"
-                        android:layout_below="@id/Setting_Fragment_My_Profile_Img_Civ"
-                        android:layout_toLeftOf="@+id/Setting_Fragment_User_Profile_Container"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_marginBottom="10dp">
                         <TextView
                             android:id="@+id/Setting_Fragment_My_Name_Tv"
                             android:text="Big_Jeon"
@@ -61,82 +53,34 @@
                             android:textStyle="bold"
                             android:layout_centerInParent="true"
                             android:textColor="@color/black"
+                            android:layout_alignParentLeft="true"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
                         </TextView>
-                        <Button
+                        <TextView
                             android:id="@+id/Setting_Fragment_Send_Friend_Request_Btn"
+                            android:layout_marginRight="5dp"
+                            android:padding="5dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:textSize="10dp"
                             android:textColor="@color/black"
-                            android:background="@color/white"
-                            android:layout_alignParentRight="true"
+                            android:background="@color/Transparent_Black30"
+                            android:layout_marginTop="5dp"
                             android:text="친구 추가 +">
-                        </Button>
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:visibility="gone"
-                            android:id="@+id/Setting_Fragment_Chatting_Btn"
-                            android:layout_width="50dp"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:src="@drawable/personal_chat_btn"
-                            android:gravity="center"
-                            android:rotationX="-1"
-                            android:rotationY="180"
-                            app:civ_border_color="@color/black"
-                            app:civ_border_width="1dp">
-                        </de.hdodenhof.circleimageview.CircleImageView>
-                    </RelativeLayout>
-                    <LinearLayout
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
-                        android:layout_weight="1"
-                        android:layout_width="match_parent"
-                        android:paddingRight="80dp"
-                        android:paddingLeft="80dp"
-                        android:layout_height="0dp">
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/Setting_Fragment_Friend_List_Civ"
-                            android:layout_weight="2"
-                            android:textColor="@color/black"
-                            android:gravity="center"
-                            android:src="@drawable/ic_baseline_group_24"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content">
-                        </de.hdodenhof.circleimageview.CircleImageView>
-                        <TextView
-                            android:id="@+id/Setting_Fragment_Friend_Count_TV"
-                            android:layout_weight="2"
-                            android:text="20"
-                            android:gravity="center"
-                            android:textColor="@color/black"
-                            android:background="@drawable/post_view_edge_2dp"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent">
                         </TextView>
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/Setting_Fragment_Post_Count_Civ"
-                            android:layout_weight="2"
-                            android:text="게시글: 20"
-                            android:gravity="center"
-                            android:textColor="@color/black"
-                            android:src="@drawable/ic_baseline_article_24"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content">
-                        </de.hdodenhof.circleimageview.CircleImageView>
-                        <TextView
-                            android:id="@+id/Setting_Fragment_Post_Count_TV"
-                            android:layout_weight="2"
-                            android:text="67"
-                            android:textColor="@color/black"
-                            android:gravity="center"
-                            android:background="@drawable/post_view_edge_2dp"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent">
-                        </TextView>
-                    </LinearLayout>
                 </LinearLayout>
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/Setting_Fragment_Chatting_Civ"
+                    android:layout_marginRight="5dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:rotationY="180"
+                    android:background="@drawable/ic_baseline_maps_ugc_24"
+                    android:textColor="@color/black">
+                </de.hdodenhof.circleimageview.CircleImageView>
             </RelativeLayout>
         </LinearLayout>
         <RelativeLayout
@@ -144,12 +88,56 @@
             android:layout_weight="12"
             android:layout_width="match_parent"
             android:layout_height="0dp">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/Setting_Fragmnet_User_Posts_RCV"
+            <LinearLayout
+                android:id="@+id/User_Profile_Btns_Container"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:listitem="@layout/post_view_item">
-            </androidx.recyclerview.widget.RecyclerView>
+                android:layout_height="35dp">
+                <LinearLayout
+                    android:gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/User_Profile_Post_Civ"
+                        android:padding="2dp"
+                        android:gravity="center"
+                        android:textColor="@color/black"
+                        android:backgroundTint="@color/purple_200"
+                        android:background="@drawable/ic_baseline_article_24"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                    </de.hdodenhof.circleimageview.CircleImageView>
+                </LinearLayout>
+                <LinearLayout
+                    android:gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:padding="2dp"
+                        android:id="@+id/User_Profile_Friend_Civ"
+                        android:textColor="@color/black"
+                        android:gravity="center"
+                        android:background="@drawable/ic_baseline_group_24"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                    </de.hdodenhof.circleimageview.CircleImageView>
+                </LinearLayout>
+            </LinearLayout>
+            <FrameLayout
+                android:id="@+id/User_Profile_FrameLayout"
+                android:layout_below="@id/User_Profile_Btns_Container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/User_Profile_ViewPager2"
+                    android:clipToPadding="false"
+                    android:clipChildren="false"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                </androidx.viewpager2.widget.ViewPager2>
+            </FrameLayout>
         </RelativeLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
