--- a/app/src/main/res/layout/activity_p2p_chatting.xml
+++ b/app/src/main/res/layout/activity_p2p_chatting.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent">
             <TextView
                 android:id="@+id/Chatting_Post_Content_TV"
-                android:text="포스팅 내용"
+                android:text="User_Name"
                 android:textSize="15dp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/uhbeerice"
