--- a/app/src/main/res/layout/activity_show_selected_post.xml
+++ b/app/src/main/res/layout/activity_show_selected_post.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
@@ -10,88 +10,85 @@
             type="com.bigjeon.grumbling.Show_Selected_Post_Activity" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.bigjeon.grumbling.Show_Selected_Post_Activity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/Selected_Post_Toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:contentInsetStart="0dp"
+        app:layout_constraintTop_toTopOf="parent">
+        <RelativeLayout
+            android:id="@+id/Selected_Post_Title_Container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/Selected_Post_User_Img"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:src="@mipmap/ic_launcher"
+                app:civ_border_color="@color/Transparent_Black70"
+                app:civ_border_width="1dp">
+            </de.hdodenhof.circleimageview.CircleImageView>
+
+            <TextView
+                android:id="@+id/Selected_Post_User_Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="15dp"
+                android:layout_toRightOf="@+id/Selected_Post_User_Img"
+                android:text="User_Name"
+                android:textColor="@color/black"
+                android:textSize="10dp"
+                android:textStyle="bold"></TextView>
+        </RelativeLayout>
+    </androidx.appcompat.widget.Toolbar>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/Selected_Post_Toolbar">
 
         <RelativeLayout
-            android:layout_weight="5.5"
             android:id="@+id/Selected_Post_Content_Container"
-            android:background="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="0dp">
+            android:layout_height="0dp"
+            android:layout_weight="5.5"
+            android:background="@color/white">
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/Transparent_Black30"
                 android:layout_above="@id/Selected_Post_Bottom_Container"
-                android:layout_below="@id/Selected_Post_Title_Container">
+                android:background="@color/Transparent_Black30">
+
                 <ImageView
                     android:id="@+id/Selected_Post_Background"
-                    android:scaleType="centerCrop"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@android:color/transparent">
-                </ImageView>
+                    android:background="@android:color/transparent"
+                    android:scaleType="centerCrop"></ImageView>
             </FrameLayout>
 
-            <RelativeLayout
-                android:id="@+id/Selected_Post_Title_Container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/Selected_Post_User_Img"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    app:civ_border_color="@color/Transparent_Black70"
-                    app:civ_border_width="1dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerInParent="true"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@mipmap/ic_launcher">
-                </de.hdodenhof.circleimageview.CircleImageView>
-
-                <TextView
-                    android:id="@+id/Selected_Post_User_Name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_toRightOf="@+id/Selected_Post_User_Img"
-                    android:text="User_Name"
-                    android:textColor="@color/black"
-                    android:textSize="10dp"
-                    android:textStyle="bold"></TextView>
-
-                <TextView
-                    android:id="@+id/Selected_Post_WriteDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerInParent="true"
-                    android:layout_marginRight="10dp"
-                    android:text="Write_Date"></TextView>
-            </RelativeLayout>
             <TextView
                 android:id="@+id/Selected_Post_Content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:fontFamily="@font/uhbeerice"
                 android:background="#50000000"
-                android:text="나는 가끔 눈물을 흘린다.">
-            </TextView>
+                android:fontFamily="@font/uhbeerice"
+                android:text="나는 가끔 눈물을 흘린다."></TextView>
 
             <RelativeLayout
                 android:id="@+id/Selected_Post_Bottom_Container"
@@ -99,58 +96,60 @@
                 android:layout_height="40dp"
                 android:layout_alignParentBottom="true"
                 android:background="@color/white">
+
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/Selected_Post_Enter_Chatting_CIV"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:src="@drawable/ic_baseline_chat_24"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
-                    android:layout_marginRight="5dp">
-                </de.hdodenhof.circleimageview.CircleImageView>
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/ic_baseline_chat_24"></de.hdodenhof.circleimageview.CircleImageView>
+
                 <TextView
                     android:id="@+id/Selected_Post_Favorite_Count_TV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/Selected_Post_Enter_Chatting_CIV"
-                    android:layout_marginRight="10dp"
                     android:layout_marginTop="20dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_toLeftOf="@+id/Selected_Post_Enter_Chatting_CIV"
                     android:text="000"
-                    android:textSize="10dp">
-                </TextView>
+                    android:textSize="10dp"></TextView>
+
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/Selected_Post_Favorite_Circle_CIV"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
+                    android:layout_marginLeft="5dp"
                     android:layout_centerInParent="true"
-                    android:layout_toLeftOf="@+id/Selected_Post_Favorite_Count_TV"
-                    android:background="@drawable/ic_baseline_favorite_border_24">
-                </de.hdodenhof.circleimageview.CircleImageView>
+                    android:layout_alignParentLeft="true"
+                    android:background="@drawable/ic_baseline_favorite_border_24"></de.hdodenhof.circleimageview.CircleImageView>
             </RelativeLayout>
         </RelativeLayout>
+
         <RelativeLayout
-            android:layout_weight="5"
-            android:background="@drawable/comment_line"
             android:layout_width="match_parent"
-            android:layout_height="0dp">
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:background="@drawable/comment_line">
+
             <TextView
                 android:id="@+id/Selected_Post_None_Chat_TextView"
-                android:visibility="gone"
-                android:text="아직 채팅이 없습니다!"
-                android:textSize="20dp"
-                android:gravity="center"
-                android:textColor="@color/Transparent_Black50"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            </TextView>
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="아직 채팅이 없습니다"
+                android:textColor="@color/Transparent_Black50"
+                android:textSize="20dp"
+                android:visibility="gone"></TextView>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/Chat_List_Rcv"
-                android:layout_marginTop="20dp"
-                android:padding="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/other_chatting_item">
-            </androidx.recyclerview.widget.RecyclerView>
+                android:layout_marginTop="20dp"
+                android:padding="5dp"
+                tools:listitem="@layout/other_chatting_item"></androidx.recyclerview.widget.RecyclerView>
         </RelativeLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
